styles/style.css
*,
*::before,
*::after{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body{
    font-family: "Poppins", sans-serif;
    scroll-behavior: smooth;
}

:root {
  --primary-color: #B88E2F;
  --secondary-color: #FFF3E3;
  --tertiary-color: #898989; 
  --black: #000000;
}

a{
    text-decoration: none;
    color: #000000;
}

ul{
    list-style: none;
}

img{
    width: 100%;
}

.container-lg{
    max-width: 1440px;
    margin: 0 auto;
}

.container{
    max-width: 1280px;
    margin: 0 auto;
}

.btn{
    background-color: var(--primary-color);
    color: #ffffff;
    padding: 25px 72px;
    transition: background-color 0.3s ease;
    font-weight: 700;
}

.btn-lg{
    padding: 0.5rem 3.5rem; 
    font-weight: 600;
}

.btn:hover,
.btn-lg:hover
{
    background-color: #ffffff;
    border: 1px solid var(--primary-color);
    color: var(--primary-color);
}

.btn-secondary{
    background-color: #ffffff;
    color: var(--primary-color);
    padding: 0.5rem 3.5rem;
    border: 1px solid var(--primary-color);
}

.btn-secondary:hover{
    background-color: var(--primary-color);
    color: #ffffff;
    padding: 0.5rem 3.5rem;
    transition: background-color 0.3s ease;
}

.header{
    position: sticky;
    top: 0;
    z-index: 10000;
    background: #ffffff;
}

.header__flex{
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 30px 54px;
}

.header__logo img{
    width: 70px;
    height: 70px;
}

.logo__content{
    display: flex;
    align-items: center;
}

.header__logo h1{
    font-size: 34px;
    font-family: "Montserrat", sans-serif;
    font-weight: 700;
    line-height: 100%;
}

.header__logo{
    display: flex;
    align-items: center;
}

.header__menu-items{
    display: flex;
    align-items: center;
    gap: 75px;
}

.header__menu-item a{
    font-size: 1rem;
    font-weight: 500;
    display: inline-block;
    transition: transform 0.3s ease;
}

.header__menu-item a:hover{
    color: var(--primary-color);
    transform: scale(1.1);
}

.header__icon-items{
    display: flex;
    align-items: center;
    gap: 45px;
}

.header__icon-item a{
    font-size: 1.5rem;
    transition: transform 0.3s ease;
    display: inline-block;
}

.header__icon-item a:hover{
    color: var(--primary-color);
    transform: scale(1.1);
}

.hero__container{
    background: url(../Image/hero-background.jpg) center/cover no-repeat;
    width: 100%;
    height: 100vh;
    display: flex;
    justify-content: flex-end;
    align-items: center;
    padding: 10%;
}

.hero__content{
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    max-width: 645px;
    padding: 62px 40px 40px;
    background-color: var(--secondary-color);
    border-radius: 10px;
}

.hero__sub-title p{
    font-size: 1rem;
    font-weight: 600;
    letter-spacing: 3px;
    line-height: 100%;
    margin-bottom: 0.25rem;
}

.hero__content__heading h1{
    font-size: 3.25rem;
    font-weight: 700;
    line-height: 65px;
    margin-bottom: 1rem;
    color: var(--primary-color);
}

.hero__content__description p{
    font-size: 18px;
    font-weight: 500;
    line-height: 24px;
    color: #333333;
    margin-bottom: 3rem;
}

.range{
    padding: 5px 0;
}

.range__content{
    text-align: center;
    margin-top: 3.5rem;
}

.range__content .range__content__heading h2{
    font-size: 32px;
    font-weight: 700;
    line-height: 150%;
    color: #333333;
}


.range__content .range__content__description p{
    font-size: 20px;
    font-weight: 400;
    line-height: 150%;
    color: #666666;
}

.range__card-box{
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    justify-content: center;
    gap: 20px;
    margin-top: 62px;
}

.range__card{
    display: flex;
    flex-direction: column;
    align-items: center;
}

.range__card img{
    width: 380px;
    height: 480px;
    object-fit: cover;
    border-radius: 10px;
}


.product{
    margin: 70px 0;
}

.product__flex{
    display: flex;
    flex-direction: column;
    gap: 2rem;
}


.product__heading{
    text-align: center;
    margin: 32px 0;
}

.product__heading h2{
    font-size: 40px;
    color: #3A3A3A;
    font-weight: 700;
    line-height: 120%;
}

.product__grid-box{
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(285px,1fr));
    gap: 15px;
    grid-auto-rows: 446px;
}

.product__grid-card{
    background-color: #F4F5F7;
    position: relative;
}

.product__overlay {
    position: absolute;
    inset: 0;
    background: rgba(0,0,0,0.6);
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    opacity: 0;
    transition: 0.3s ease;
}

.product__grid-card:hover .product__overlay {
    opacity: 1;
}

.product__btn {
    background: #fff;
    color: var(--primary-color);
    font-weight: 600;
    padding: 12px 25px;
    border: none;
    cursor: pointer;
    margin-bottom: 15px;
}

.product__actions{
    display: flex;
    gap: 20px;
    font-size: 14px;
}

.product__actions__icon{
    color: #ffffff;
    cursor: pointer;
}

.batch{
    position: absolute;
    top: 20px;
    right: 30px;
    background: #E97171;
    height: 50px;
    width: 50px;
    border-radius: 50%;
    display: flex;
    align-items: center;
    justify-content: center;
}

.batch__new{
    background: #2EC1AC;
    color: #ffffff;
}

.product__grid-card img{
    height: 75%;
    width: 100%;
    object-fit: cover;
}

.product__grid__price{
    display: flex;
    justify-content: space-between;
}

.product__grid__price p{
    color: #B0B0B0;
    font-weight: 400;
    line-height: 150%;
}

.product__more{
    text-align: center;
}

.product__grid__content{
    padding: 0 15px;
}

.product__grid__content h3,
p{
    margin-bottom: 8px;
}

.inspiration{
  padding: 44px 4%;
  background-color: var(--bg-color);
  overflow: hidden;
  background: #FCF8F3;
}

.inspiration__flex{
    display: flex;
    align-items: center;
    gap: 42px;
    justify-content: space-between;
}

.inspiration__content {
  flex: 1;
  max-width: 400px;
}

.inspiration__content h1 {
  font-size: 40px;
  color: #000000;
  line-height: 1.2;
  margin-bottom: 15px;
}

.inspiration__content p {
  color: #616161;
  margin-bottom: 30px;
}

.arrow__btn {
  position: absolute;
  right: -40px;
  bottom: 0;
  background: var(--primary-color);
  color: white;
  width: 40px;
  height: 40px;
  display: flex;
  align-items: center;
  justify-content: center;
}

.inspiration__gallery {
  flex: 2;
  display: flex;
  gap: 20px;
  position: relative;
}

.inspiration__first {
  position: relative;
  flex: 1;
}

.inspiration__first img {
  width: 404px;
  height: 582px;
  object-fit: cover;
}

.interior__label {
  position: absolute;
  bottom: 30px;
  left: 30px;
  background: rgba(255, 255, 255, 0.9);
  padding: 25px;
}

.interior__number {
  font-size: 14px;
  color: #616161;
}

.inspiration__second {
  flex: 1;
  position: relative;
}

.inspiration__second img {
  width: 372px;
  height: 486px;
  object-fit: cover;
}

.inspiration-nav {
  margin-top: 20px;
  display: flex;
  gap: 10px;
}

.dot {
  width: 10px;
  height: 10px;
  border-radius: 50%;
  background: #d8d8d8;
}

.dot.active {
  background: var(--primary-color);
  outline: 1px solid var(--primary-color);
  outline-offset: 4px;
}

.next-arrow {
  position: absolute;
  top: 50%;
  right: -20px;
  background: white;
  color: var(--primary-color);
  width: 40px;
  height: 40px;
  border-radius: 50%;
  display: flex;
  align-items: center;
  justify-content: center;
  box-shadow: 0 4px 10px rgba(0,0,0,0.1);
  cursor: pointer;
}

.inspiration__third img {
  width: 30%;
  height: 486px;
  object-fit: cover;
}


.furniture-grid {
  padding: 60px 0;
  background-color: #fff;
  text-align: center;
  overflow: hidden;
}


.furniture-grid__subtitle {
  font-size: 20px;
  color: #616161;
  margin-bottom: 8px;
}

.furniture-grid__title {
  font-size: 40px;
  font-weight: 700;
  color: #3a3a3a;
  margin-bottom: 40px;
}

.furniture-grid__container {
  display: grid;
  grid-template-columns: repeat(9, 1fr);
  grid-template-rows: repeat(7, 100px);
  gap: 16px;
  width: 100%;
}

.furniture-grid__item {
  position: relative;
  width: 100%;
  height: 100%;
}

.furniture-grid img {
    width: 100%;
    height: 100%;
    object-fit: cover;
}

.furniture-grid__item--1 { 
    grid-column: 1 /2; 
    grid-row: 1 / 5; 
}
.furniture-grid__item--2 { 
    grid-column: 2 / 4; 
    grid-row: 2 / 5;
}
.furniture-grid__item--3 { 
    grid-column: 1 / 2; 
    grid-row: 5 / 8; 
}
.furniture-grid__item--4 { 
    grid-column: 2 / 4; 
    grid-row: 5 / 7; 
}
.furniture-grid__item--5 { 
    grid-column: 4 / 6; 
    grid-row: 3 / 7; 
}
.furniture-grid__item--6 {
     grid-column: 6 / 8; 
     grid-row: 2 / 5; 
    }
.furniture-grid__item--7 { 
    grid-column: 8 / 10; 
    grid-row: 1 / 5; 
}
.furniture-grid__item--8 { 
    grid-column: 6 / 7; 
    grid-row: 5 / 8; 
}
.furniture-grid__item--9 { 
    grid-column: 7 / 9; 
    grid-row: 5 / 7; 
}


.footer {
    padding: 3rem 0;
    border-top: 1px solid #D9D9D9;
}

.footer__container {
    max-width: 1280px;
    margin: 0 auto;
}

.footer__content {
    display: flex;
    justify-content: space-between;
    gap: 1.5rem;
    padding-bottom: 3rem;
    border-bottom: 1px solid #D9D9D9;
}

.footer__brand-info {
    flex: 1;
}

.footer__logo {
    font-size: 1.5rem;
    font-family: "Montserrat", sans-serif;
    font-weight: 700;
    margin-bottom: 2rem;
}

.footer__address {
    font-size: 0.875rem;
    color: #9F9F9F;
    line-height: 1.5;
}

.footer__link-section, 
.footer__help-section, 
.footer__newsletter-section {
    flex: 1;
}

.footer__section-title {
    font-size: 1rem;
    color: #9F9F9F;
    font-weight: 500;
    margin-bottom: 2rem;
}

.footer__links-list {
    display: flex;
    flex-direction: column;
    gap: 1rem;
}

.footer__link-menu {
    font-size: 0.875rem;
    font-weight: 500;
}

.footer__item:hover {
    color: var(--primary-color);
}

.footer__newsletter-form {
    display: flex;
    gap: 0.5rem;
    align-items: flex-end;
}

.footer__newsletter-input {
    border: none;
    border-bottom: 1px solid #000000;
    padding: 0.25rem;
    width: 100%;
}

.footer__newsletter-button {
    background: none;
    border: none;
    border-bottom: 1px solid #000000;
    font-weight: 500;
    padding-bottom: 0.25rem;
    cursor: pointer;
}

.footer__bottom {
    padding-top: 1.5rem;
}

.footer__copyright {
    font-size: 0.875rem;
    color: #9F9F9F;
}

